<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="@dimen/_24sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_view1"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_shape_edittext"
            android:hint="@string/email"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

        </EditText>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_shape_edittext"
            android:hint="@string/password"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="@dimen/_96sdp"

            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@string/login"

            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"

            android:textStyle="bold">

        </com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/newaccounttextview"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="Create New Account"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>