<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".activities.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/create_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create New Account"
            android:textSize="@dimen/_18ssp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <FrameLayout
            android:id="@+id/image_layout"
        android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/_80sdp"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            android:scaleType="centerCrop"
            app:strokeWidth="@dimen/_1sdp"
            android:layout_gravity="center"
            android:background="@drawable/background_image"
            android:layout_height="@dimen/_80sdp">

        </com.google.android.material.imageview.ShapeableImageView>
            <TextView
                android:id="@+id/image_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Image"
                android:textSize="@dimen/_13ssp"
                android:gravity="center"/>
    </FrameLayout>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_shape_edittext"
            android:hint="@string/name"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

        </EditText>
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_shape_edittext"
            android:hint="@string/email"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

        </EditText>

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_shape_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

        </EditText>
        <EditText
            android:id="@+id/edit_con_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_shape_edittext"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

        </EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/_96sdp"

            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:text="@string/sign_up"

            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"

            android:textStyle="bold">

        </com.google.android.material.button.MaterialButton>
        <TextView
            android:id="@+id/sign_in_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>